=============================================================================
Dillo project
=============================================================================

Here we list changes that are relatively significant and/or visible to the
user. For a history of changes in full detail, see our Mercurial repository
at http://hg.dillo.org/dillo

dillo-3.0.4.1 [not released yet]

+- Fix linking problem with fltk-1.3.3 and fl_oldfocus.
   Patch: Jorge Arellano Cid
+- Don't load background images in --local mode.
 - Make sure window is resizable with fltk-1.3.3.
   Patches: Johannes Hofmann
+- Remove Fl_Printer stub that always gave problems compiling under OSX.
   Patch: corvid

-----------------------------------------------------------------------------

dillo-3.0.4 [April 09, 2014]

+- OPTGROUP and INS elements.
 - Some HTML5 elements, etc.
 - Added show_ui_tooltip preference (BUG#1140).
   Patches: corvid
+- Make embedding into other applications more reliable (BUG#1127).
 - Add search from address bar.
 - Share CSS user agent stylesheet between pages.
   Patches: Johannes Hofmann
+- Better scaling (down) of images, even with consideration of gamma
   correction.
 - Fixed (possibly security) problem of FltkImgBuf caused by integer overflow
   (BUG#1129).
 - Some linebreaking fixes, and optimization for non-justified text, including
   new preference stretchability_factor.
 - Added white_bg_replacement preference.
 - Implemented background images (except 'background-attachment'), added
   load_background_images preference, as well as a new entry in the tools menu.
   Patches: Sebastian Geerken
+- Fix a set of bugs reported by Oulu Univ. Secure Programming Group
   (HTML parsing, URL resolution, GIF processing, etc.)
 - Improved/fixed handling of HEAD, TITLE, TEXTAREA and form inputs.
 - Made show_url dillorc option work again (BUG#1128)
   Patches: Jorge Arellano Cid
+- Fix compiling on Hurd.
   Patch: Pino Toscano
+- Avoid Dpid children becoming zombies.